@@ -1,23 +1,20 @@
 package Lecture_3;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 import java.util.Scanner;
 
 public class Solution_3 {
     public static void main(String[] args) throws IOException {
-        try (Scanner scanner = new Scanner(System.in);){
-            String way = scanner.nextLine();
-            Path path = Paths.get(way);
-            List<String> lines = Files.readAllLines(path, StandardCharsets.UTF_8);
-            lines.stream().forEach(System.out::println);
+        try (Scanner scanner = new Scanner(System.in); BufferedReader bufferedReader = Files.newBufferedReader(Path.of(scanner.nextLine()))) {
+            String line;
+            while ((line = bufferedReader.readLine()) != null) {
+                System.out.println(line);
+            }
         } catch (IOException e) {
             System.out.println("Something went wrong : " + e);
         }
     }
 }
-
